# mlplayground

./: LICENSE  galton.csv  mlplayground.cabal  tags
app/: Main.hs
src/: Csv.hs  Lib.hs  NaiveMatrix.hs
src/Algorithms/: LinearRegresion.hs
test/: CsvSpec.hs  InfrastructureSpec.hs
