name:                mlplayground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vokhotnikov/mlplayground#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Okhotnikov
maintainer:          vokhotnikov@gmail.com
copyright:           2016 Vladimir Okhotnikov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , NaiveMatrix
                     , Algorithms.LinearRegression
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable mlplayground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mlplayground
  default-language:    Haskell2010

test-suite mlplayground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mlplayground
                     , hspec
  other-modules:       InfrastructureSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vokhotnikov/mlplayground
